Upgrade to Spring Boot 3.1.0 and moved from springfox to springdoc with OpenAPI support

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.url= jdbc:mysql://localhost:3306/${MYSQLDB_DATABASE}?useSSL=fa
 spring.datasource.username= ansie
 spring.datasource.password= ${MYSQLDB_ROOT_PASSWORD}
 spring.sql.init.mode=always
-spring.datasource.initialization-mode=always
+springdoc.packagesToScan=nl.han.se.ans.api
+springdoc.pathsToMatch=/api/**
