--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.datasource.url= jdbc:mysql://localhost:3306/${MYSQLDB_DATABASE}?useSSL=fa
 spring.datasource.username= ansie
 spring.datasource.password= ${MYSQLDB_ROOT_PASSWORD}
 spring.sql.init.mode=always
-springdoc.packagesToScan=nl.han.se.ans.api
+springdoc.packagesToScan=nl.han.se.ans.questions,nl.han.se.ans.openquestions,nl.han.se.ans.mcquestions
 springdoc.pathsToMatch=/api/**
