--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -36,10 +36,10 @@ services:
         "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
         "spring.sql.init.mode" : "always",
         "spring.datasource.initialization-mode" : "always" }'
-    volumes:
-      - /Users/rodmidde/.m2:/root/.m2
+    volumes: 
+      - mavencache:/root/.m2
     stdin_open: true
     tty: true
 
 volumes:
-  db:
+  mavencache:
