Added frontend to docker compose setup.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 
 services:
-  mysqldb:
+  db:
     image: mariadb:10.5.22
     restart: unless-stopped
     env_file: .env
@@ -16,30 +16,37 @@ services:
         target: /var/lib/mysql
     healthcheck:
       test: "healthcheck.sh --connect"
-      interval: 2s
-      timeout: 5s
-      retries: 20
-      start_period: 2s
-  app:
+      interval: 10s
+  backend:
     depends_on:
-      mysqldb:
+      db:
         condition: service_healthy
-    build: ./
+    build: ./backend
     restart: on-failure
     env_file: .env
     ports:
       - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
+        "spring.datasource.url"  : "jdbc:mysql://db:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
         "spring.datasource.username" : "$MYSQLDB_USER",
         "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
         "spring.sql.init.mode" : "always",
         "spring.datasource.initialization-mode" : "always" }'
     volumes: 
       - mavencache:/root/.m2
+    healthcheck:
+      test: "curl --fail http://localhost:8080/api/examQuestions/any || exit 1"
+      interval: 10s
     stdin_open: true
     tty: true
+  frontend:
+    build: /frontend
+    # best practice for node on docker (see https://github.com/nodejs/docker-node/blob/main/docs/BestPractices.md)
+    init: true 
+    restart: on-failure
+    ports:
+      - 5173:5173
 
 volumes:
   mavencache:
