--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "preview": "vite preview --port 5173"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react": "^18.2.12",
     "@types/react-dom": "^18.2.5",
     "@vitejs/plugin-react": "^4.0.0",
