--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     stdin_open: true
     tty: true
   frontend:
-    build: /frontend
+    build: ./frontend
     # best practice for node on docker (see https://github.com/nodejs/docker-node/blob/main/docs/BestPractices.md)
     init: true
     restart: on-failure
